@@ -1,3 +1,9 @@
+2018-09-13  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (print_debug_macro_section): Use elf_getdata. Print
+	decoded flag string.
+2018-09-13  Mark Wielaard  <mark@klomp.org>
+
 2018-10-19  Mark Wielaard  <mark@klomp.org>
 
 	* unstrip.c (copy_elided_sections): Renumber group section indexes.
